# capability-poc

./: .dockerignore  .env  .gitignore  .gitmodules  CITATION.cff  Cargo.toml  LICENSE  README.md  capability-poc.code-workspace  docker-compose.yml
as-api/: .env  .gitignore  Cargo.toml  autorityserver.db  autorityserver.db-shm  autorityserver.db-wal
as-api/migrations/: 20220118100258_init_database.sql
as-api/src/: main.rs
cap-client/: .gitignore  README.md  gnap.json  next.config.js  package-lock.json  package.json  tailwind.config.js
cap-client/components/: layout.js
cap-client/lib/: GnapProvider.js  gnap.md  menu.js  useGnap.js
cap-client/lib/comps/: Bowl.js  CreateBowl.js  CreateWaterlevel.js  DeleteWaterlevel.js  ReadBowl.js  ReadWaterlevel.js
cap-client/pages/: _app.js  index.js  login.js
cap-client/pages/posts/: first-post.js
cap-client/styles/: globals.css
doc/: EXPLAINATION.md  explanation.md
dockerfiles/: cap-client  gnap-as  simple-api  single-api
gnap-cli/: Cargo.toml
gnap-cli/src/: lib.rs  serde_utils.rs
gnap-cli/src/models/: access_token.rs  error.rs  interact.rs  introspect.rs  mod.rs  options.rs  request.rs  response.rs
gnap-cli/tests/: request_contiuation.rs
http-auth-filter/: Cargo.toml  test.sh
http-auth-filter/src/: main.rs
http_auth_filter/: Cargo.toml  intro.json
http_auth_filter/src/: main.rs
simple-api/: .env  .gitignore  Cargo.toml  README.md  simple_api.rs  sqlx-data.json  test.db  test.db-shm
simple-api/migrations/: 20211221095031_create_database.sql
simple-api/src/: filter.rs  main.rs  service.rs
single-api/: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json  test.db
single-api/migrations/: 20211221095031_create_database.sql
single-api/src/: lib.rs  main.rs  model.rs  service.rs
trait-bounds/: .env  Cargo.toml  bounds_persons.db  bounds_persons.db-shm  bounds_persons.db-wal  persons.db  persons.db-shm  persons.db-wal  sqlx-data.json
trait-bounds/examples/: bounds.rs  closures.rs  enums.rs  idea.rs  traits.rs  typestate.rs
trait-bounds/migrations/: 20220120115450_init_database.sql
