[package]
name = "as-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.11", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres", "chrono"] }
async-trait = "0.1.52"
tokio = { version = "1.17.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
actix-http = "3.0.0-rc.4"
actix-web = "3.3.3"
actix-web-httpauth = "0.5.1"
env_logger = "0.9.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
