[package]
name = "http-auth-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-web-httpauth = "0.6.0-beta.8"
env_logger = "0.9.0"
gnap-cli = { path = "../gnap-cli"}
log = "0.4.14"
reqwest = "0.11.9"
