[package]
name = "simple_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# capabilities = { git = "https://github.com/spydx/capabilities" }
capabilities = { path = "../capabilities" }
sqlx = { version = "0.5.10", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres", "chrono"] }
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
actix-http = "3.0.0-beta.18"
actix-web = "4.0.0-beta.20"
actix-web-httpauth = "0.6.0-beta.7"
env_logger = "0.9.0"
serde_json = "1.0.75"
serde = { version = "1.0.133", features = ["derive"] }
serde-aux = "3.0.1"
