[package]
name = "trait_bounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sqlx = { version = "0.5.10", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres", "chrono"] }
tokio = { version = "1.15.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.52"
typestate = "0.8.0"
rstest = "0.12.0"